--- a/teach/xpc.html
+++ b/teach/xpc.html
@@ -3,9 +3,12 @@
 <title>xiepeichen,hello wworld</title>
 </head>
 <body style="text-align: center">
-	<h1>谢沛辰的网站！</h1>
-	<p>你好，欢迎来到谢沛辰。<br>请使用谢沛辰发明的终极网站。</p>
-   	<img src="https://images.unsplash.com/photo-1502489597346-dad15683d4c2?auto=format&fit=crop&w=967&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
+	<div style="text-align: center;font-size: 40px;">谢沛辰的网站！</div>
+	<p style="background-color: red;color: white;">你好，欢迎来到谢沛辰的网站。<br>请使用谢沛辰发明的终极网页。</p>
+   <p style="font-family: Times New Roman">这是 Times New Roman 字体</p>
+
+   <img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=333452031,178723693&fm=27&gp=0.jpg">
+
 </body>
 
 
