--- a/teach/tangshiqi.html
+++ b/teach/tangshiqi.html
@@ -1,9 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD>
-<META content="text/html; charset=gb2312" http-equiv=Content-Type>
-<META name=GENERATOR content="MSHTML 8.00.7601.18934"></HEAD>
-<BODY>
-<H1>zheshih1</H1>
-<H2>zheshih2 </H2>
-<H5>zheshih5</H5>
-<P>zheship</P></BODY></HTML>
+<html style="display: flex; justify-content: center;flex-direction: column;">
+    <h1 style="text-align: center;">ikun的网站</h1>
+    <p style="text-align: center;">下面是蔡徐坤</p>
+    <div style="display: flex; justify-content: center;flex-direction: column;align-items: center;">
+        <div style="display: flex; justify-content: row;align-items: center;">
+            <img src="https://gss2.bdstatic.com/-fo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike220%2C5%2C5%2C220%2C73/sign=10fc9941c21b9d169eca923392b7dfea/bd3eb13533fa828bc024967df11f4134970a5a2c.jpg" style="width:300px;height:400px;align-items: center;margin-top: 20px;">
+            <div style="margin-left: 80px;">蔡徐坤出生于 1998.8.2。湖南人。身高 1.82，体重 55 千克。</div>
+        </div>
+        <div style="display: flex; justify-content: row;align-items: center;">
+            <div style="margin-right: 80px;">他最喜欢看文摘，散文类书。最喜欢吃芹菜炒牛肉。</div>
+            <img src="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike220%2C5%2C5%2C220%2C73/sign=d3eae47fd0b44aed4d43b6b6d275ec64/908fa0ec08fa513d73658beb376d55fbb2fbd93c.jpg" style="width:300px;height:400px;align-items: center;margin-top: 20px;">
+        </div>
+        <div style="display: flex; justify-content: row;align-items: center;">
+            <img src="https://gss2.bdstatic.com/9fo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike272%2C5%2C5%2C272%2C90/sign=83d4e008d154564ef168ec6bd2b7f7e7/7e3e6709c93d70cff1477616f4dcd100baa12b68.jpg" style="width:300px;height:400px;align-items: center;margin-top: 20px;">
+            <div style="margin-left: 80px;">最拿手的菜是蛋炒饭。</div>
+        </div>
+    </div>
+</html>
