--- a/teach/gaoji.html
+++ b/teach/gaoji.html
@@ -11,7 +11,7 @@
             }
             .img {
                 width:400px;
-                height:200px;
+                /* height:200px; */
                 align-items: center;
                 margin-top: 20px;
             }
@@ -25,6 +25,8 @@
 
                 .intro {
                     margin-top: 10px;
+                    align-items: center;
+                    text-align: center;
                 }
             }
         </style>
@@ -35,7 +37,9 @@
         <div style="display: flex; justify-content: center;flex-direction: column;align-items: center;">
             <div class="box">
                 <img class="img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1533034158710&di=df5c5dce74cd310ad09378d0583b7293&imgtype=0&src=http%3A%2F%2Fupload.bbtnews.com.cn%2F2018%2F0727%2F1532682604512.png">
-                <div class="intro">刺客伍六七</div>
+                <div class="intro">
+                    刺客伍六七
+                </div>
             </div>
             <div class="box">
                 <img class="img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1533034216533&di=faf98d9f312cb21d0ced884622693f5d&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201507%2F31%2F20150731201907_KjAzS.thumb.700_0.jpeg">
@@ -67,7 +71,7 @@
                 <div class="intro">黑执事</div>
             </div>
             <div class="box">
-                <img class="img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1533034700733&di=1998adbd2371fc1b4b1420026faf6396&imgtype=0&src=http%3A%2F%2Fcdnq.duitang.com%2Fuploads%2Fitem%2F201501%2F23%2F20150123003528_Qxz2a.thumb.700_0.jpeg">
+                <img class="img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1533035159016&di=93868e19ab6d480393dfa720d7c7e757&imgtype=0&src=http%3A%2F%2Ftupian.qqjay.com%2Fu%2F2013%2F1030%2F25_84154_3.jpg">
                 <div class="intro">皮卡丘</div>
             </div>
             <div class="box">
