--- a/teach/gaoji.html
+++ b/teach/gaoji.html
@@ -8,6 +8,9 @@
                 justify-content: row;
                 align-items: center;
                 flex-wrap: wrap;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                margin: 10 20 20 10;
+                border-radius: 10px;
             }
             .img {
                 width:400px;
@@ -16,7 +19,8 @@
                 margin-top: 20px;
             }
             .intro {
-                
+                margin-top: 10px;
+                margin-bottom: 10px;
             }
             @media all and (max-width: 800px) {
                 .img, .intro {
