--- a/teach/chuji.html
+++ b/teach/chuji.html
@@ -3,17 +3,24 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+            body {
+                background-color: pink;
+            }
             .box {
                 display: flex;
                 justify-content: row;
                 align-items: center;
                 flex-wrap: wrap;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                margin: 10 20 20 10;
+                border-radius: 10px;
+                background-color: white;
             }
             .img {
                 width:400px;
                 height:200px;
                 align-items: center;
-                margin-top: 20px;
+                border-radius: 10px 10px 0 0;
             }
             .intro {
                 
@@ -25,6 +32,9 @@
 
                 .intro {
                     margin-top: 10px;
+                    align-items: center;
+                    text-align: center;
+                    margin-bottom: 10px;
                 }
             }
         </style>
